# nixos-configuration

./: .gitignore  .gitmodules  README.md  configuration.nix  flake.nix
hardware/: force-pipeline.sh  hardware.nix
home/: bash.nix  bat.nix  fzf.nix  git.nix  gpg.nix  home.nix  user-private.nix  user.nix  xcompose  xdg.nix
home/alacritty/: alacritty-dark.yml  alacritty-light.yml  alacritty.nix  alacritty.toml  alacritty.yml  base-config.yml  switch-config  switch-theme  switch-to-dark.sh  switch-to-light.sh
home/bash/: bash.nix  bashrc
home/kakoune/: kak-lsp.toml  kakoune.nix  kakrc.kak
home/ranger/: rc.conf  scope.sh
home/vim/: coc-nvim.vim  coc-settings.json  gruvbox.vim  haskell-vim.vim  init.vim  nerdtree.vim  reload-nvim-config  solarized.vim  taboo.vim  vim-slime.vim  vim.nix
home/wm/: xmobarrc  xmobarrc_0  xmobarrc_1  xmonad.nix
hosts/: hostOverridesForHomeManager.nix  semruk.nix  tempeh.nix  tofu.nix
modules/desktop/: default.nix  fonts.nix  keyboard.nix  lock.nix  pipewire.nix  xmonad.nix
modules/devices/: dell-g15.nix  pavilion.nix  semruk.nix  semruk_v9_2_3.nix
modules/nix/: config.nix  default.nix
nix/: countdown.nix  fstar.nix  man-pages-posix.nix  z3.nix
overlays/: 0001-print-xid-in-decimal.patch  countdown.nix  default.nix  discord.nix  fstar-bin.nix  kakoune-cr.nix  krita.nix  man-pages-posix.nix  tabbed-overlay.nix  xmonad-0-17-1.nix  xmonad-overlay.nix
overlays-compat/: overlays.nix
users/: koluacik.nix
xmonad/: .envrc  my-xmonad.cabal  shell.nix  xmobarrc_2  xmonad.hs
xmonad/app/: Main.hs
xmonad/src/: BaseConfig.hs  Keys.hs  Layout.hs  MyXmonad.hs  Reparenter.hs  Scratchpad.hs  StatusBar.hs  WindowBringer.hs
(+34 files in other folders)
